First round of performace fixes.  This primarily consists of updating VuFind to support PHP7 and adding some extended Memcached support.